// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page should render correctly 1`] = `
"<section><main class=\\"\\">test-value<style>
        main {
          width: 100%;
          padding: calc(16px * 2.5) 0;
        }
      </style></main><style>
        section {
          width: 750px;
          max-width: 100vw;
          min-height: 100vh;
          margin: 0 auto;
          padding: 0 16px;
          box-sizing: border-box;
          position: relative;
        }
      </style></section>"
`;

exports[`Page should work with different size 1`] = `
"<div><section><main class=\\"\\"><style>
        main {
          width: 100%;
          padding: calc(16px * 2.5) 0;
        }
      </style></main><style>
        section {
          width: calc(750px - 180pt);
          max-width: 100vw;
          min-height: 100vh;
          margin: 0 auto;
          padding: 0 16px;
          box-sizing: border-box;
          position: relative;
        }
      </style></section><section><main class=\\"\\"><style>
        main {
          width: 100%;
          padding: calc(16px * 2.5) 0;
        }
      </style></main><style>
        section {
          width: calc(750px - 100pt);
          max-width: 100vw;
          min-height: 100vh;
          margin: 0 auto;
          padding: 0 16px;
          box-sizing: border-box;
          position: relative;
        }
      </style></section><section><main class=\\"\\"><style>
        main {
          width: 100%;
          padding: calc(16px * 2.5) 0;
        }
      </style></main><style>
        section {
          width: calc(750px + 100pt);
          max-width: 100vw;
          min-height: 100vh;
          margin: 0 auto;
          padding: 0 16px;
          box-sizing: border-box;
          position: relative;
        }
      </style></section><section><main class=\\"\\"><style>
        main {
          width: 100%;
          padding: calc(16px * 2.5) 0;
        }
      </style></main><style>
        section {
          width: 100%;
          max-width: 100vw;
          min-height: 100vh;
          margin: 0 auto;
          padding: 0 16px;
          box-sizing: border-box;
          position: relative;
        }
      </style></section></div>"
`;
